Fixing the wrapping issue for content node views

--- a/themes/shell/styles/nodes/_display_teaser_photo.scss
+++ b/themes/shell/styles/nodes/_display_teaser_photo.scss
@@ -11,6 +11,7 @@
     }
 
     // Teaser container
+    .view-content,
     .views-infinite-scroll-content-wrapper{
       display: flex;
       flex-wrap: wrap;
