--- a/themes/shell/styles/nodes/_display_teaser_video.scss
+++ b/themes/shell/styles/nodes/_display_teaser_video.scss
@@ -10,6 +10,7 @@
     }
 
     // Teaser container
+    .view-content,
     .views-infinite-scroll-content-wrapper{
       display: flex;
       flex-wrap: wrap;
